--- a/package.json
+++ b/package.json
@@ -15,11 +15,22 @@
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
+    "coveragePathIgnorePatterns": [
+      "eslint.js"
+    ],
     "transform": {
       "^.+\\.[jt]sx?$": "babel-jest"
     },
     "setupFiles": [
       "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
     ]
   },
   "dependencies": {
