--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
     "testEnvironment": "jsdom",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
@@ -37,6 +40,7 @@
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
     "jest-expo": "^49.0.0",
@@ -45,14 +49,16 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.3.0",
+    "@types/jest": "^29.5.5",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.7.0",
+    "jest": "^29.2.1",
     "react-native-gesture-handler": "^2.13.2"
   },
   "private": true
